--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>To-Do List <img src="/images/icon.png" alt="icon-carnet"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add a task">
-                <button onclick="addTask()">Add</button>
+                <button class="button-add">Add</button>
             </div>
             <p class="text-error"></p>
             <ul class="list-container">
@@ -27,3 +27,5 @@
 </body>
 
 </html>
+
+<!-- onclick="addTask()" -->
