update CSS et ajout fonctionnalite touche Entrer

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do List <img src="/images/icon.png" alt="icon-carnet"></h2>
+            <h2>MON AMAZING TO-DO</h2>
             <div class="row">
-                <input type="text" id="input-box" placeholder="Add a task">
-                <button class="button-add">Add</button>
+                <input type="text" id="input-box" placeholder="Ajouter une tâche">
+                <button class="button-add">Ajouter</button>
             </div>
             <p class="text-error"></p>
             <ul class="list-container">
