--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="row">
                 <input type="text" id="input-box" placeholder="Ajouter une tâche">
                 <button class="button-add">Ajouter</button>
+                <button id ="darkenPage">Noir</button>
             </div>
             <p class="text-error"></p>
             <ul class="list-container">
