changement d etats task-event

--- a/index.html
+++ b/index.html
@@ -15,11 +15,24 @@
             <div class="row">
                 <input type="text" id="input-box" placeholder="Ajouter une tâche">
                 <button class="button-add">Ajouter</button>
-                <button id ="darkenPage">Noir</button>
+                <!-- <button id ="darkenPage">Noir</button> -->
             </div>
             <p class="text-error"></p>
             <ul class="list-container">
             </ul>
+        </div>
+        <div class="eventTask">
+            <h2 class="eventTitle">MON AMAZING TO-DO</h2>
+            <div class="eventDivTop">
+                <p class="eventParagraphe">🎉 <br> Félicitations, vous vennez de valider votre cinquième tâche.<br><br>
+                C'est peut-être un detail pour vous, mais pour nous ça veut dire beaucoup (mais pas trop quand même). <br><br>
+                Il est l'heure de faire une petite pause. Prennez donc quelques instants pour chercher ce que nous avons caché sur cette
+                page. 🔎"</p>
+            </div>
+            <div class="eventDivBottom">
+                <button class="buttonLeft" type="buttonLeft">Let's Play!</button>
+                <button class="buttonRight" type="buttonRight">Nope</button>
+         </div>
         </div>
 
 
