--- a/newtab.html
+++ b/newtab.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Amazing To-Do</title>
+    <link rel="stylesheet" href="style-newtab.css">
+    <title>New Tab - L.L.D.C.A.F.A.F.V.F.E.N.P.E.D.F</title>
 </head>
 
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>MON AMAZING TO-DO</h2>
+            <h2>L.L.D.C.A.F.A.F.V.F.E.N.P.E.D.F</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Ajouter une tâche">
                 <button class="button-add">Ajouter</button>
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <div class="eventTask">
-            <h2 class="eventTitle">MON AMAZING TO-DO</h2>
+            <h2 class="eventTitle">L.L.D.C.A.F.A.F.V.F.E.N.P.E.D.F</h2>
             <div class="eventDivTop">
                 <p class="eventParagraphe">🎉 <br> Félicitations, vous vennez de valider votre cinquième tâche.<br><br>
                     C'est peut-être un detail pour vous, mais pour nous ça veut dire beaucoup (mais pas trop quand
@@ -36,10 +36,16 @@
                 <button class="buttonRight" type="buttonRight">Nope</button>
             </div>
         </div>
+        <div class="trophee">
+            <h1>La liste de choses à faire qu’il faut vraiment faire et ne pas éviter de faire</h1>
+            <img src="" alt="motivation-meme" class="motivation-meme">
+        </div>
+
 
 
     </div>
     <script src="/script.js"></script>
+    <script src="/motivation.js"></script>
 </body>
 
 </html>
