--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>MON AMAZING TO-DO</h2>
+            <h2>L.L.D.C.A.F.A.F.V.F.E.N.P.E.D.F</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Ajouter une tâche">
                 <button class="button-add">Ajouter</button>
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <div class="eventTask">
-            <h2 class="eventTitle">MON AMAZING TO-DO</h2>
+            <h2 class="eventTitle">L.L.D.C.A.F.A.F.V.F.E.N.P.E.D.F</h2>
             <div class="eventDivTop">
                 <p class="eventParagraphe">🎉 <br> Félicitations, vous vennez de valider votre cinquième tâche.<br><br>
                 C'est peut-être un detail pour vous, mais pour nous ça veut dire beaucoup (mais pas trop quand même). <br><br>
