--- a/newtab.html
+++ b/newtab.html
@@ -38,6 +38,7 @@
         </div>
         <div class="trophee">
             <h1>La liste de choses à faire qu’il faut vraiment faire et ne pas éviter de faire</h1>
+            <hr class="solid">
             <img src="" alt="motivation-meme" class="motivation-meme">
         </div>
 
